# FFVIIRebirthAP

./: .gitignore  MEMORY_ITEM_ANALYSIS.md  POTENTIAL_RANDOMIZERS.md  README.md  TASKS.md  useful_hooks.txt
docs/: API_HOOKS.md
docs/archive/: API_HOOKS.md  CE_STRUCTURE_DISCOVERY.md  FINDING_CHEST_DATA.md  MEMORY_ITEM_ANALYSIS.md  NEXT_STEPS.md  RANDOMIZATION_GUIDE.md  REWARD_FORMAT_ANALYSIS.md  TECHNICAL_ANALYSIS.md
memory_bridge/: CMakeLists.txt  MemoryBridge.cpp  MemoryBridge.h  README.md  build.bat  ce_pointer_writer.lua  main.cpp
tools/: AP_DEVELOPMENT_GUIDE.md  JSON_EXPORT_WORKFLOW.md  README.md  REWARD_STRUCTURE_FINDINGS.md  analyze_reward_structure.py  archipelago_asset_names.txt  build_equipment_mappings.py  build_item_name_map.py  check_boss_prefixes.py  config.ini  enemy_stats_randomizer.py  equipment_stats_randomizer.py  exporter_example.cs  extract_all_ce_ids.py  extract_asset.ps1  extract_item_names.py  filter_ue4ss_functions.py  find_and_extract_asset.ps1  generate_item_mappings.py  generate_location_mappings.py  inspect_reward_details.py  item_price_randomizer.py  materia_price_randomizer.py  parse_exported_json.py  reward_randomizer.py  reward_randomizer_json.py  reward_smart_parser.py  setup_unpack_dirs.py  shop_inventory_randomizer.py  shop_price_randomizer.py  smart_price_randomizer.py  uasset_datatable_parser.py  uasset_to_json.py  uassetgui_price_randomizer.py
tools/data/: README.md  (+32 more)
ue4ss_mod/: README.md  README_MOD.md  dllmain.cpp  xmake.lua
ue4ss_mod_cpp/: README.md  dllmain.cpp  xmake.lua
ue4ss_mod_lua/: README.md
unpack/: README.md
(+108 files in other folders)
